Added returnTypeName field to RSignature and RSignatureBuilder